@@ -10,6 +10,7 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
+2014-12-19 Joe                Extended email entries (Geoffrey Walton).
 2014-12-17 Joe                Fixed Quote Valid Days in System and GL Setup, Setup tab.
 2014-12-09 Janusz Dobrowolski Fixed problems with latin2 encoding due to changes in htmlspecialchars() behaviour in newer php versions.
 2014-11-22 Janusz Dobrowolski Further fixes to javascript multiple class handling. (Incomplete yet works for now. Needs further changes in FAMods)
